--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
       К наиболее интересному кухонному оборудованию принадлежит большой камин с автоматическим поворотом вертелов. ... Одновременно могло жаритсья 60 цыплят. 
     </section>
-    <header><b>Арсенал</b></header>
+    <h2><b>Арсенал</b></h2>
     <section>
      <p>
      Арсенал замка содержит одну из крупнейших коллекций оружия и доспехов в Центрально Европе. ... 
