--- a/courses.html
+++ b/courses.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Курсы японского языка</title>
+    <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./coursestyle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@500&display=swap" rel="stylesheet">
   </head>
   <body class="body">
     <header class="header">
