--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Курсы японского языка</title>
-    <link rel="stylesheet" href="./fonts.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Oswald:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./coursestyle.css">
   </head>
   <body class="body">
